--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -26,7 +26,7 @@ Fonts are separated by a & */
   --nav-hover-link-color: white;
   --nav-hover-background-color: #E2D4B7;
 }
-
+/* These colors I did change... */
 
 /*  Look around below...but DON'T CHANGE ANYTHING! */
 
