--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Galindo&family=Stick+No+Bills:ital,wght@0,400;0,700;1,400&display=swap');
+
+
+
 #content{
     max-width: 1600px;
     margin: 0 auto;
@@ -8,8 +12,16 @@ nav a{
     text-align: center;
     color: #CADBC8;
     text-decoration: none;
+    padding: 35px;
 }
 
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+
+.card-img {
+    border: 10px solid #E2D4B7;
+}
 
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
@@ -20,6 +32,7 @@ nav a{
 }
 
 main section {
+    box-sizing: border-box;
     text-align: center;
 }
 
@@ -29,10 +42,18 @@ main section {
 }
 
 body {
+    padding: 0;
+    margin: 0;
+    font-family: Galindo, Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 22px;
     background-color: #B0BBBF;
+}
+h2 {
+    margin: 0;
 }
 
 header {
+    font-family: "Stick No Bills", Arial, Helvetica, sans-serif;
     background-color: #A1A499;
 }
 
@@ -42,9 +63,13 @@ nav a:hover {
 }
 
 .book, .join {
+    font-size: 18px;
     background-color: #A1A499;
     color: #CADBC8;
     text-decoration: none;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 
 .book:hover, .join:hover {
@@ -53,12 +78,16 @@ nav a:hover {
 }
 
 .msg {
+    padding: 35px;
+    line-height: 1.5em;
     background-color: #E2D4B7;
 }
 
 footer {
+    padding: 25px 50px;
     background-color: #A1A499;
     color: #CADBC8;
+    margin-top: 200px;
 }
 
 footer a {
@@ -70,8 +99,13 @@ footer a:hover {
     color: #B0BBBF;
 }
 
+footer .social img {
+    padding-top: 15px;
+}
 .home-title {
+    font-size: 2em;
     color: #CADBC8;
+    margin-top: 10px;
 }
 
 h4 {
@@ -79,17 +113,24 @@ h4 {
 }
 
 .msg h2 {
+    font-family: "Stick No Bills", Arial, Helvetica, sans-serif;
     color:#B0BBBF;
 }
 
 .msg p {
+    padding-bottom: 15px;
+    font-size: .8em;
     color:#A1A499;
 }
 
 .logo {
     width: 80px;
 }
+#logo_link {
+    padding-top: 5px;
+}
 .icon {
+    padding-top: 10px;
     width:  80px;
 }
 
@@ -103,3 +144,6 @@ footer p {
 footer p a:hover {
     text-decoration: underline;
 }
+
+
+
