--- a/positionstyles.css
+++ b/positionstyles.css
@@ -64,8 +64,8 @@
 /* Activity 3 styles */ 
 .content3 {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-column-gap: 50px;
+  grid-template-columns: 1fr 1fr 1fr;
+
   /* This is the parent of the activity 3 boxes. */
 }
 .red3 {
@@ -80,6 +80,7 @@
   background-color: green;
 } 
 .yellow3 {
+  grid-column: 3;
   width: 275px; 
   height: 150px; 
   background-color: gold; 
