--- a/styles/site-plan.css
+++ b/styles/site-plan.css
@@ -1,29 +1,29 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@600&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
-  --accent2-color: white;
+  --primary-color: #3B3B58   ;
+  --secondary-color: #6E8894 ;
+  --accent1-color: #F7B267;
+  --accent2-color: #F5F3F5;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon SC";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: "Bebas Neue";
+  --paragraph-font: "Inter", Lato, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #396E94;
+  --headline-color-on-white: #3B3B58;  /* headlines on a white background */ 
+  --headline-color-on-color: #F5F3F5; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #3B3B58; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #F5F3F5; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #3B3B58  ;
+  --nav-link-color: #3B3B58;
+  --nav-background-color: #F7B267;
+  --nav-hover-link-color: #F5F3F5;
+  --nav-hover-background-color: #3B3B58;
 }
 
 
