--- a/styles/style.css
+++ b/styles/style.css
@@ -253,3 +253,173 @@ footer p a:hover {
         margin-top: 25px;
     }
 }
+
+
+/* PAGE 2 */
+
+.checked {
+    color: orange;
+  }
+
+ul {list-style-type: none;}
+/* Month header */
+.month {
+    padding: 70px 25px;
+    width: 97%;
+    background: #1abc9c;
+    text-align: center;
+  }
+  
+  /* Month list */
+  .month ul {
+    margin: 0;
+    padding: 0;
+  }
+  
+  .month ul li {
+    color: white;
+    font-size: 20px;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+  }
+  
+  /* Previous button inside month header */
+  .month .prev {
+    float: left;
+    padding-top: 10px;
+  }
+  
+  /* Next button */
+  .month .next {
+    float: right;
+    padding-top: 10px;
+  }
+  
+  /* Weekdays (Mon-Sun) */
+  .weekdays {
+    margin: 0;
+    padding: 10px 0;
+    background-color:#ddd;
+  }
+  
+  .weekdays li {
+    display: inline-block;
+    width: 13.6%;
+    color: #666;
+    text-align: center;
+  }
+  
+  /* Days (1-31) */
+  .days {
+    padding: 10px 0;
+    background: #eee;
+    margin: 0;
+  }
+  
+  .days li {
+    list-style-type: none;
+    display: inline-block;
+    width: 13.6%;
+    text-align: center;
+    margin-bottom: 5px;
+    font-size:12px;
+    color: #777;
+  }
+  
+  /* Highlight the "current" day */
+  .days li .active {
+    padding: 5px;
+    background: #1abc9c;
+    color: white !important
+  }
+  .map_container {
+    display: grid;
+    grid-template-columns:  repeat( 8, 1fr);
+  }
+   .trip_info_grid{
+    margin-top: 50px;
+    display: grid;
+    grid-template-rows:  repeat( 4, 1fr);
+}
+.map1 {
+    grid-column: 1/2;
+}
+.map2 {
+    grid-column: 3/4;
+}
+.map3 {
+    grid-column: 5/6;
+}
+.map4 {
+    grid-column: 7/8;
+}
+
+#map_heading {
+    text-align: center;
+}
+#calander_heading {
+    text-align: center;
+}
+
+
+
+.tripinfo1 {
+    display: grid;
+    grid-template-columns:  repeat( 4, 1fr);
+    grid-row: 1;
+}
+
+.tripinfo2 {
+    display: grid;
+    grid-template-columns:  repeat( 4, 1fr);
+    grid-row: 2;
+}
+
+.tripinfo3 {
+    display: grid;
+    grid-template-columns:  repeat( 4, 1fr);
+    grid-row: 3;
+}
+
+.tripinfo4 {
+    display: grid;
+    grid-template-columns:  repeat( 4, 1fr);
+    grid-row: 4;
+}
+
+.image_box h5 {
+    grid-row: 2;
+    text-align: center;
+    
+}
+.paragrah_box button {
+    font-size: xx-large;
+    grid-row: 2;
+    grid-column-start: 2;
+    grid-column-end: 4;
+    height: fit-content;
+}
+.paragrah_box p {
+    grid-column: 1/4;
+}
+.image_box img {
+    grid-row: 1/2;
+    
+}
+.paragrah_box h2 {
+    grid-row: 2;
+    text-align: center;
+
+}
+.paragrah_box {
+    display: grid;
+    grid-template-columns:  repeat( 3, 1fr);
+    grid-row: 1/3;
+    grid-column: 1/3;
+}
+.image_box {
+    display: grid;
+    grid-template-rows:  repeat( 2, 1fr);
+    grid-column: 4;
+
+}
