--- a/starIQ/styles/style.css
+++ b/starIQ/styles/style.css
@@ -83,10 +83,12 @@ nav a:hover {
     grid-row: 2 / 3;
     grid-column: 3/6;
     text-align: center;
+    font-size: 28px;
 }
 
 /* Search area */
 .search_area {
+    margin-top: 40px;
     z-index: 100;
     position: sticky;
     top: 0;
