--- a/starIQ/styles/style.css
+++ b/starIQ/styles/style.css
@@ -147,11 +147,11 @@ nav a:hover {
 
 footer {
     padding: 25px 50px;
-    
+    background-color: var(--secondary-color);
     display: flex;
     justify-content: space-around;
     align-items: center;
-    
+    font-size: 20px;
 }
 
 footer a {
