--- a/starIQ/styles/style.css
+++ b/starIQ/styles/style.css
@@ -26,6 +26,7 @@
   h1, h2, h3, h4, h5, h6 {
     font-family: var(--heading-font);
     color: var(--headline-color-on-white);
+    font-size: 30px;
   }
   .welcome_area > h2, .purpose_area > h3 {
     color: var(--headline-color-on-color);
