--- a/starIQ/styles/style.css
+++ b/starIQ/styles/style.css
@@ -111,7 +111,7 @@ nav a:hover {
     border-radius: 20px 0px 0px 20px;
 }
 
-.search_button:hover, .log_in_button:hover {
+.search_button:hover, .log_in_button:hover, .search_button_store:hover {
     transform: scale(1.1);
 }
 .middle_text {
@@ -349,4 +349,93 @@ span.psw {
   .cancelbtn {
      width: 100%;
   }
+}
+
+/* Page 2 */
+
+
+.welcome_area_store {
+  display: grid;
+  grid-template-columns: 100px 100px 175px 75px 340px 330px;
+  grid-template-rows: 220px 75px 400px;
+}
+
+.store_heading {
+  color: var(--accent2-color);
+  text-align:left;
+  margin-top: 110px;
+  font-size: 35px;
+  grid-column: 6/7;
+  grid-row: 1/1;
+  z-index: 2;
+}
+
+.store_head_pic {
+  grid-column: 2/7;
+  grid-row: 1/1;
+  text-align: right;
+}
+
+.search_bar_store {
+  grid-column: 5/6;
+  border-radius: 0px 25px 25px 0px;
+}
+.search_button_store{
+  grid-column: 4/5;
+  margin-top: 7px;
+  height: fit-content;
+  border-radius: 25px 0px 0px 25px;
+}
+.welcome_area_store p {
+  grid-row: 3;
+  grid-column: 5/6;
+  color: var(--accent2-color);
+}
+
+
+.star_store {
+  display: grid;
+  grid-template-columns: 1fr 100px 100px 1fr;
+  grid-template-rows: 100px 100px 100px 100px;
+}
+.star_store p{
+  grid-row: 2/4;
+  grid-column: 1/3;
+}
+.star_store img {
+  grid-column: 4/5;
+}
+
+.recent_purchases {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 75px 1fr;
+}
+.recent_purchases h2 {
+  grid-row: 1;
+  grid-column: 2;
+  text-align: center;
+}
+.recent_item1 {
+  text-align: center;
+  grid-row: 2;
+  grid-column: 1;
+  
+}
+.recent_item2 {
+  text-align: center;
+  grid-row: 2;
+  grid-column: 2;
+}
+
+.recent_item3 {
+  text-align: center;
+  grid-row: 2;
+  grid-column: 3;
+}
+
+.recent_item1:hover, .recent_item2:hover, .recent_item3:hover {
+  background-color: var(--accent1-color);
+  transform: scale(1.1);
+  box-shadow: 5px 5px 10px #6f7364;
 }
