--- a/starIQ/styles/style.css
+++ b/starIQ/styles/style.css
@@ -111,7 +111,7 @@ nav a:hover {
     border-radius: 20px 0px 0px 20px;
 }
 
-.search_button:hover, .log_in_button:hover, .search_button_store:hover {
+.search_button:hover, .log_in_button:hover, .search_button_store:hover, .email_button:hover {
     transform: scale(1.1);
 }
 .middle_text {
@@ -438,4 +438,84 @@ span.psw {
   background-color: var(--accent1-color);
   transform: scale(1.1);
   box-shadow: 5px 5px 10px #6f7364;
+}
+
+
+
+/* Page 3 */
+
+.contact_pic {
+  grid-column: 3/6;
+}
+.contact_header {
+  grid-column: 4/5;
+  grid-row: 2;
+  text-align: center;
+}
+
+.email_area {
+  margin-top: 15px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 100px 100px 100px;
+}
+
+.email_area p {
+  grid-column: 1/3;
+  grid-row: 1/3;
+}
+.email_button {
+  margin-top: 45px;
+  margin-right: 45px;
+  grid-column: 3/5;
+  grid-row: 1/3;
+  border-radius: 15px;
+}
+
+.mobile_app {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 75px 100px 100px 100px 100px 100px 100px 100px;
+}
+.mobile_app h4 {
+  grid-column: 2/4;
+  text-align: center;
+  margin-right: 150px;
+}
+.mobile_app img {
+  grid-column: 2;
+}
+
+.mobile_picture {
+  text-align: center;
+  margin-left: 15px;
+  grid-row: 4;
+  grid-column: 2;
+  display: grid;
+  grid-template-columns: 1fr 100px 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+.mobile_icon {
+  grid-column: 2;
+  grid-row: 2;
+  margin-left: 25px;
+  
+}
+.input1 {
+  grid-column: 2;
+  grid-row: 4;
+  box-shadow: 5px 5px 10px #6f7364;
+}
+.input2 {
+  grid-column: 2;
+  grid-row: 5;
+  box-shadow: 5px 5px 10px #6f7364;
+}
+.mobile_app button {
+  grid-column: 2;
+  grid-row: 6;
+  box-shadow: 5px 5px 10px #6f7364;
+}
+.mobile_button:hover {
+ transform: scale(1.1);
 }
